Moved images to the correct place

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Dreamers - 20/11</title>
-    <link rel="icon" href="devdreamers.png">
+    <link rel="icon" href="resources/images/devdreamers.png">
     <link rel="stylesheet" href="style.css">
 
     <!-- BOOTSTRAP ICONS -->
@@ -19,7 +19,7 @@
 
     <!-- ===== HEADER ===== -->
     <header class="header">
-        <img src="/devdreamers.png" class="logo">
+        <img src="resources/images/devdreamers.png" class="logo">
         <div class="chia"></div>
     </header>
     <main class="container">
@@ -36,7 +36,7 @@
                 chân thành và lan tỏa tình cảm ấm áp đến những người giáo viên đáng kính!
             </p>
           </div>
-            <img src="/arrow.png" class="arrow">
+            <img src="resources/images/arrow.png" class="arrow">
         </section>
 
         <!-- ========== RIGHT SIDE ========== -->
