--- a/index.html
+++ b/index.html
@@ -43,17 +43,19 @@
         <section class="right">
           <div style="display: flex; flex-direction: row;">
             <div class="thiep">
-                Nhân dịp lễ 20/11,<br>
-                chúng em gửi tới các thầy cô<br>
-                lời chúc tốt đẹp và chân<br>
-                thành nhất, chúc thầy cô luôn<br>
-                hoàn thành tốt nhiệm vụ<br>
-                trong sự nghiệp trồng người.
+                <p class="loichuc">
+                  Nhân dịp lễ 20/11,<br>
+                  chúng em gửi tới các thầy cô<br>
+                  lời chúc tốt đẹp và chân<br>
+                  thành nhất, chúc thầy cô luôn<br>
+                  hoàn thành tốt nhiệm vụ<br>
+                  trong sự nghiệp trồng người.
+                </p>
             </div>
             
             <div class="nut-phai">
 
-              <button class="nut loichuc" ><i class="bi bi-input-cursor-text"></i></button>
+              <button class="nut newtxt" ><i class="bi bi-input-cursor-text"></i></button>
               <button class="nut font"><i class="bi bi-fonts"></i></button>
               <button class="nut bg"><i class="bi bi-image-alt"></i></button>
 
