Added background + Phone layout 3.3

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- ===== JAVASCRIPT LIBRARIES ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.9.3/dist/dom-to-image-more.min.js"></script>
     <script src="script.js"></script>
 
 </body>
