Make the card downloadable + Phone layout 3.4

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Playwrite+VN:wght@100..400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&family=Bonheur+Royale&family=Charm:wght@400;700&family=Corinthia:wght@400;700&family=Ephesis&family=Fleur+De+Leah&family=Gwendolyn:wght@400;700&family=Imperial+Script&family=Italianno&family=Lavishly+Yours&family=Lovers+Quarrel&family=Mea+Culpa&family=Ms+Madi&family=Passions+Conflict&family=Qwigley&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -73,7 +74,7 @@
 
     <!-- ===== JAVASCRIPT LIBRARIES ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.9.3/dist/dom-to-image-more.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js"></script>
     <script src="script.js"></script>
 
 </body>
