--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- ===== JAVASCRIPT LIBRARIES ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html-to-image/1.11.11/html-to-image.min.js"></script>
+    <script src="/html-to-image.js"></script>
     <script src="script.js"></script>
 
 </body>
