--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- ========== RIGHT SIDE ========== -->
         <section class="right">
           <div style="display: flex; flex-direction: row;">
-            <div class="thiep" id="thiep-card"> <!-- Added an ID for easier selection -->
+            <div class="thiep" id="tam-thiep"> <!-- Added an ID for easier selection -->
                 <p class="loichuc">
                   Nhân dịp lễ 20/11,<br>
                   chúng em gửi tới các thầy cô<br>
